For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Improvements::

* remove shy hyphens from text in log message when formatted text cannot be parsed (#2599)
* clear float box if next block falls outside of flaot group (#2596)
* resolve fonts relative to theme dir before GEM_FONTS_DIR if `pdf-fontsdir` not specified (#2349)

== 2.3.20 (2025-09-17) - @mojavelinux

Improvements::

* add symbols for shift, command, option, and return keys to the fallback font
* render horizontal dlist without using prawn-table, allowing the description to exceed the height of one page (#2591)
* allow relative font size for sub and sup to be set independently (support combined setting for backwards compatibility)
* allow value of `base-font-size-min` and `<category>-font-size-min` theme keys to be relative (e.g., 0.75em) (#2547)
* respect `hide-uri-scheme` attribute when appending URL to link text when media is print or prepress (#2583)

Bug Fixes::

* always force NULL character to have 0 width, even if missing from font (#2585)
* don't drop line in running content if attribute reference resolves to text that contains attribute reference (not originally present)
* correctly calculate extent for block in columns that starts below doctitle (#2579)
* support internal link on image (value of link attribute starts with #) (#2572)

Compliance::

* suppress warning about the use of Ruby's logger gem when loading Asciidoctor
* ignore error if bigdecimal gem cannot be eagerly required

=== Details

{url-repo}/releases/tag/v2.3.20[git tag] | {url-repo}/compare/v2.3.19\...v2.3.20[full diff]

== 2.3.19 (2024-10-11) - @mojavelinux

Improvements::

* replace OpenStruct with internal ThemeData class for storing theme data (#2535)

Bug Fixes::

* support horizontal alignment on AsciiDoc table cell that only contains paragraphs (#2358)
* don't allow AsciiDoc table cell to overrun bottom of page on which it fits (#2538)